[package]
name = "hypernova"
version = "0.1.0"
authors = ["Ganesha Danu <ganeshadanu1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.0", features=["yaml"]}

[dependencies.shell]
git = "https://github.com/google/rust-shell.git"
